<resources>
    <string name="app_name">"Alle's Benefícios"</string>
    <string name="password">Password (123)</string>
    <string name="username">Usuário (john)</string>
    <string name="login">Login</string>
    <string name="statement">Extrato</string>
    <string name="recharge">Recarregar</string>
    <string name="card">Cartão</string>
    <string name="welcome">Bem vindo!</string>
    <string name="balance">Saldo disponível</string>
    <string name="Title">Login</string>
    <string name="login_sub_title">Insira suas credenciais abaixo (username = \"user\", password = \"123\")</string>
    <string name="go_back">Voltar</string>
    <string name="rechargeWithPix">Recarregar Saldo via Pix</string>
    <string name="balanceToRecharge">Saldo a recarregar:</string>
    <string name="last_recharges">Últimas recargas:</string>
    <string name="value">Valor</string>
    <string name="you">Você</string>
    <string name="cc_layout_number">0000 0000 0000</string>
    <string name="cc_layout_name">John Doe</string>
    <string name="card_page_description">Cadastre o cartão Alle em\nsua Carteira digital e em\nseus apps preferidos!\nPs. Funciona nas catracas\nde metro também ;D\n</string>
    <string name="Alle">Alle</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_desc">header desc</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">john@example.com</string>
    <string name="action_settings">Configurações</string>
    <string name="balance_categories">Categorias de saldo</string>
    <string name="market_balance_label">"Mercado: "</string>
    <string name="transport_balance_label">"Transporte: "</string>
    <string name="restaurant_balance_label">"Refeição: "</string>
    <string name="general_balance_label">"Saldo livre: "</string>
</resources>