<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance" />


        <Button
        android:id="@+id/btnStatement"
        android:minHeight="56dp"
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statement" />

        <Button
            android:id="@+id/btnRecharge"
            android:minHeight="56dp"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recharge" />

        <Button
            android:id="@+id/btnCard"
            android:minHeight="56dp"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card" />

    </LinearLayout>

</ScrollView>