<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.example.myapplication.ui.home.HomeViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context=".ui.home.HomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/balance_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardBackgroundColor="#FFFFFF">

            <!-- Use a vertical LinearLayout to display items vertically -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/txt_balance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textSize="16sp"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:id="@+id/txt_balance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 100,00"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/balance_category_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#FFFFFF">

            <!-- Use a vertical LinearLayout to display items vertically -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/txt_balance_categories_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_categories"
                    android:textSize="16sp"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:id="@+id/txt_market_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 100,00"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:id="@+id/txt_restaurant_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 100,00"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:id="@+id/txt_transport_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 100,00"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="8dp"/>

                <TextView
                    android:id="@+id/txt_general_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 100,00"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/dyn_layout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/btn_statement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:minHeight="56dp"
                android:text="@string/statement"
                app:layout_constraintTop_toBottomOf="@+id/txtBalance" />

            <Button
                android:id="@+id/btn_recharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:minHeight="56dp"
                android:text="@string/recharge"
                app:layout_constraintTop_toBottomOf="@+id/btnStatement" />

            <Button
                android:id="@+id/btn_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:minHeight="56dp"
                android:text="@string/card"
                app:layout_constraintTop_toBottomOf="@+id/btnRecharge" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>

